<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fling Sample</string>
    <string name="media_playing">Playing-</string>
    <string name="media_paused">Paused-</string>
    <string name="media_done">Finished-</string>
    <string name="media_error">Error-</string>
    <string name="media_seeking">Seeking-</string>
    <string name="media_preping">Preparing Media-</string>
    <string name="media_readytoplay">Ready to play-</string>
    <string name="menu_fling">Connect to device</string>
    <string name="btn_disconnect">Disconnect</string>
    <string name="btn_close">Close</string>
    <string name="empty_text"></string>
    <string name="communication_error">Communication Error</string>
    <string name="backwardButton">backwardButton</string>
    <string name="playButton">playButton</string>
    <string name="pauseButton">pauseButton</string>
    <string name="stopButton">stopButton</string>
    <string name="forwardButton">forwardButton</string>
    <string name="mediaImage">mediaImage</string>
</resources>
