<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.amazon.whisperplay.example.FlingActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="13"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/mediaList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="#d3d3d3"
            android:dividerHeight="1.5dp"
            android:choiceMode="singleChoice"
            android:listSelector="@android:color/holo_blue_light">
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_weight="2"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/currentstatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/empty_text"
                android:textSize="20sp"
                android:singleLine="true"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/currentmediatitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/empty_text"
                android:textSize="20sp"
                android:singleLine="true"
                android:textStyle="bold"/>
        </LinearLayout>
        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/currentDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_alignParentStart="true"
            android:text="@string/empty_text"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/totalDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_alignParentEnd="true"
            android:text="@string/empty_text"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="2">
        <ImageView
            android:id="@+id/backward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onClick"
            android:paddingStart="10dp"
            android:paddingEnd="33dp"
            android:contentDescription="@string/backwardButton"
            android:src="@drawable/ic_rewind_default_light_24dp"/>
        <ImageView
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/backward"
            android:clickable="true"
            android:onClick="onClick"
            android:paddingStart="0dp"
            android:paddingEnd="33dp"
            android:contentDescription="@string/playButton"
            android:src="@drawable/ic_play_default_light_24dp"/>
        <ImageView
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/play"
            android:clickable="true"
            android:onClick="onClick"
            android:paddingStart="0dp"
            android:paddingEnd="33dp"
            android:contentDescription="@string/pauseButton"
            android:src="@drawable/ic_pause_default_light_24dp"/>
        <ImageView
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/pause"
            android:clickable="true"
            android:onClick="onClick"
            android:paddingStart="0dp"
            android:paddingEnd="33dp"
            android:contentDescription="@string/stopButton"
            android:src="@drawable/ic_stop_default_light_24dp"/>
        <ImageView
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/stop"
            android:clickable="true"
            android:onClick="onClick"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:contentDescription="@string/forwardButton"
            android:src="@drawable/ic_fast_forward_default_light_24dp"/>
    </RelativeLayout>
</LinearLayout>
